# face-recognition.cpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
bindings/android/: binding.cpp
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
include/: FaceBoundingBox.h  FaceRecognizer.h  IntBufferImage.h  NNQueryResult.h  library.h
jni/: CMakeLists.txt  binding.cpp
src/: DetectedFaceEmbeddings.h  FaceDetector.cpp  FaceDetector.h  FaceEmbedder.cpp  FaceEmbedder.h  FaceRecognizer.cpp  FaceRecognizer.h  FaceRecognizerInternal.cpp  FaceRecognizerInternal.h  Logger.h  Types.h  Utils.h  VectorDB.cpp  VectorDB.h  VectorIndex.cpp  VectorIndex.h  library.cpp
src/models/: DetectedFaceEmbeddings.h
src/schema/: VectorRecords.fbs  VectorRecords_generated.h
tests/: CMakeLists.txt  FaceDetectorTests.cpp  FaceEmbedderTests.cpp  FaceRecognizerTests.cpp  TestUtils.h  VectorDBTests.cpp
